--- a/index.html
+++ b/index.html
@@ -10,9 +10,19 @@
   <link rel="shortcut icon" href="./index_files/logo2.png">
   <link rel="stylesheet" href="./index_files/plugins.css">
   <link rel="stylesheet" href="./index_files/style.css">
+
+  <!-- BOOTSTRAP -->
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+
+  <!-- FIN BOOTSTRAP -->
+
+
 </head>
 
-<body class="onepage" data-bs-spy="scroll" data-bs-target=".navbar-collapse .navbar-nav"><nav class="navbar navbar-expand-lg classic transparent  navbar-clone fixed navbar-unstick">
+<body class="onepage" data-bs-spy="scroll" data-bs-target=".navbar-collapse .navbar-nav">
+  <nav class="navbar navbar-expand-lg classic transparent  navbar-clone fixed navbar-unstick">
         <div class="container flex-lg-row flex-nowrap align-items-center">
             
           <div class="navbar-brand w-100">
@@ -21,7 +31,7 @@
             </a>
           </div>
           
-          <div class="navbar-collapse offcanvas offcanvas-nav offcanvas-start">
+          <div class="navbar-collapse offcanvas offcanvas-nav offcanvas-start micabecera">
             <div class="offcanvas-header d-lg-none">
               <a href="https://selmanyrosales.com"><img src="./index_files/logo.png" srcset="./assets/img/logo@2x.png 2x" alt=""></a>
               <button type="button" class="btn btn-circle btn-white btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
@@ -628,7 +638,7 @@
       </div>
       <!--/.container -->
     </section>
-    <div class="swiper-container swiper-bg swiper-container-0" data-effect="fade" data-margin="0" data-autoplay="true" data-autoplaytime="7000">
+    <div class="swiper-container swiper-bg swiper-container-0" data-effect="fade" data-margin="0" data-autoplay="true" data-autoplaytime="5000">
       <div class="swiper swiper-fade swiper-initialized swiper-horizontal swiper-pointer-events swiper-watch-progress swiper-backface-hidden">
         <div class="swiper-wrapper" style="cursor: grab; transition-duration: 0ms;" id="swiper-wrapper-8a0184cdcfa10de43" aria-live="off">
           <div class="swiper-slide swiper-slide-visible swiper-slide-active" role="group" aria-label="1 / 4" style="width: 853px; opacity: 1; transform: translate3d(0px, 0px, 0px); transition-duration: 0ms;"><img src="./index_files/bg1.jpg" alt=""></div>
@@ -647,4 +657,6 @@
   <script src="./index_files/theme.js.descarga"></script>
 
 
-</body></html>
+</body>
+
+</html>
